Fix hover images on mobile

--- a/css/master-template.css/RecommendedShows.aspx.less
+++ b/css/master-template.css/RecommendedShows.aspx.less
@@ -252,3 +252,12 @@ div#PH_Search {
 #itemsListLabel {
     display: none;
 }
+
+.dataItem .item_image IMG, .dataItem:hover .item_image IMG, .dataItem.simulateHover .item_image IMG {
+    @media @mobile {
+        height: auto;
+        width: 100%;
+        max-height: 328px;
+        max-width: 100%;
+    }
+}
